Please see NEWS for a summary of changes since the last release suitable
for announcements.

* Mon Aug 20 2012 Thunor <thunorsif@hotmail.com>
- Added support for button horizontal image with label alignment: by
  default the alignment is centred but it can be optionally uniform.

* Sun Aug 19 2012 Thunor <thunorsif@hotmail.com>
- Added window tags to a substantial number of old examples because they
  really should be there despite the parser accepting them without and
  it'll stop newcomers experiencing problems writing apps that launch.

* Sat Aug 18 2012 Thunor <thunorsif@hotmail.com>
- Added support for activate to compatible widgets.
- Added examples/miscellaneous/activate.

* Fri Aug 17 2012 Thunor <thunorsif@hotmail.com>
- New widget: <fontbutton>.
- Added examples/fontbutton/fontbutton.
- Updated the wiki and the reference docs.

* Tue Aug 14 2012 Thunor <thunorsif@hotmail.com>
- Added examples/miscellaneous/show_and_hide.

* Sun Aug 12 2012 Thunor <thunorsif@hotmail.com>
- Fixed a bug that caused applications that included a menu to fail to
  close via the window manager (title bar) and in fact closewindow too.
- Fixed a bug that caused a parser error when using multiple launched
  windows: the envvar that contained the program was being overwritten.

* Thu Aug 9 2012 Thunor <thunorsif@hotmail.com>
- Refactored the menubar widget and updated it in the parser so that it
  now supports the recently added hide and show action functions.

* Wed Aug 8 2012 Thunor <thunorsif@hotmail.com>
- Refactored the frame widget and added support for <input>,
  <input file>, enable, disable, show, hide, refresh, save and clear.
- Added support for show and hide to all widgets except those that
  require refactoring and updating in the parser to support directives.
- Refactored the hbox widget and updated it in the parser so that it
  now supports the recently added hide and show action functions.
- Refactored the vbox widget and updated it in the parser so that it